first components in dev

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+<div class="app-shell-wrapper">
+  <bbz-header-nav></bbz-header-nav>
+  <h2>
+    <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
+  </h2>
 
-</ul>
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+  <bbz-footer></bbz-footer>
+</div>
