wav audio files added/ glow effect button styles++

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -100,3 +100,30 @@ i.animate.anim-endless {
         transform: scale3d(1, 1, 1)
     }
 }
+
+/* Glow text
+ fonts.googleapis.com/css?family=Warnes
+ <div class="button">Neon
+Glow</div>
+<link async href="http://fonts.googleapis.com/css?family=Warnes" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
+*/
+@import "compass/css3";
+
+.button {
+  display: inline-block;
+  @include box-sizing(border-box);
+  padding: 10px;
+  border: none;
+  font: normal 48px/normal "Warnes", Helvetica, sans-serif;
+  color: rgba(255,255,255,1);
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  @include text-shadow(0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de );
+  @include transition(all 200ms cubic-bezier(0.42, 0, 0.58, 1));
+}
+.button:hover {
+  @include text-shadow(0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff );
+}
